name:                systemd-systemctl
version:             0.1.0.0
synopsis:            Wrapper around Systemd's systemctl command
description:         Please see README.md
homepage:            http://github.com/badi/systemd-systemctl#readme
license:             BSD3
license-file:        LICENSE
author:              Badi' Abdul-Wahid
maintainer:          abdulwahidc@gmail.com
copyright:           2015 Badi' Abdul-Wahid
category:            System
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     System.Systemd.Systemctl
  build-depends:       base >= 4.7 && < 5
                     , exceptions
                     , mtl
                     , unordered-containers
                     , shelly
                     , text
  default-language:    Haskell2010

-- executable systemd-systemctl-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , systemd-systemctl
--   default-language:    Haskell2010

-- test-suite systemd-systemctl-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , systemd-systemctl
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/badi/systemd-systemctl
